--- a/styles1.css
+++ b/styles1.css
@@ -1,4 +1,4 @@
- body { 
+/* body { 
   background: url('https://png.pngtree.com/back_origin_pic/04/16/49/5c7472b8c776c96d5ec370e87a4ebf93.jpg') center/cover no-repeat fixed;
   color: #ccc;
   font-family: sans-serif;
@@ -8,10 +8,10 @@
   display:flex;
   align-items: center;
   justify-content: center;
-}
+}*/
 
   
-  .loader {
+  /*.loader {
     font-size: 30px;
     width: 200px;
     height: 200px;
@@ -22,9 +22,9 @@
     text-transform: uppercase;
     background: rgba(0, 0, 0, 0.5);
     border-radius: 50%;
-  }
-  
-  .loader:before,
+  }*/
+
+/*  .loader:before,
   .loader:after {
     opacity: 0;
     box-sizing: border-box;
@@ -36,9 +36,9 @@
     border-radius: 50%;
     border: 5px solid #fff;
     box-shadow: 0 0 50px #e52222, inset 0 0 50px #b82424;
-  }
+  }*/
   
-  .loader:after {
+ /* .loader:after {
     
     animation: loading 2s infinite 1s;
   }
@@ -46,9 +46,9 @@
   .loader:before {
     
     animation: loading 2s infinite ;
-  }
+  }*/
   
-  @keyframes loading {
+ /* @keyframes loading {
     0% {
       transform: scale(0);
       opacity: 0;
@@ -60,5 +60,5 @@
       transform: scale(1);
       opacity: 0;
     }
-  }
+  }*/
    
